cmake_minimum_required(VERSION 3.14)
project(LeetCode C)

set(CMAKE_C_STANDARD 99)

add_executable(LeetCode main.c LeetCode_question_bank/LeetCode_1.c LeetCode_question_bank/LeetCode_3.c LeetCode_question_bank/Leetcode_771.c LeetCode_question_bank/LeetCode_1295.c LeetCode_question_bank.h LeetCode_question_bank/LeetCode_1281.c LeetCode_question_bank/LeetCode_1108.c LeetCode_question_bank/LeetCode_237.c)