cmake_minimum_required(VERSION 3.14)
project(LeetCode C)

set(CMAKE_C_STANDARD 99)

add_executable(LeetCode main.c LeetCode_question_bank/LeetCode_1.c LeetCode_question_bank/LeetCode_3.c LeetCode_question_bank/Leetcode_771.c LeetCode_question_bank/LeetCode_1295.c LeetCode_question_bank.h LeetCode_question_bank/LeetCode_1281.c LeetCode_question_bank/LeetCode_1108.c LeetCode_question_bank/LeetCode_237.c LeetCode_question_bank/LeetCode_1323.c LeetCode_question_bank/LeetCode_1221.c LeetCode_question_bank/LeetCode_1021.c LeetCode_question_bank/LeetCode_709.c LeetCode_question_bank/LeetCode_1304.c LeetCode_question_bank/LeetCode_2.c LeetCode_question_bank/LeetCode_4.c LeetCode_question_bank/LeetCode_5.c LeetCode_question_bank/LeetCode_6.c LeetCode_question_bank/LeetCode_7.c)